@@ -1,5 +1,6 @@
 plugins {
   id 'org.jetbrains.kotlin.jvm'
+  id 'jacoco'
 }
 
 repositories {
@@ -13,10 +14,67 @@ configurations {
 dependencies {
   testImplementation 'org.jetbrains.kotlin:kotlin-test'
   testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+  ktlint("com.pinterest:ktlint:0.49.1") {
+    attributes {
+      attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
+    }
+  }
+}
+
+jacocoTestCoverageVerification {
+  violationRules {
+    rule {
+      limit {
+        counter = 'LINE'
+        value = 'TOTALCOUNT'
+        maximum = 0.8
+      }
+    }
+  }
+}
+
+tasks.register("ktlintCheck", JavaExec) {
+  group = "verification"
+  description = "Check Kotlin code style."
+  classpath = configurations.ktlint
+  mainClass = "com.pinterest.ktlint.Main"
+  args "src/**/*.kt", "**.kts", "!**/build/**"
+}
+
+tasks.named("check") {
+  dependsOn tasks.named("jacocoTestCoverageVerification")
+  dependsOn tasks.named("ktlintCheck")
+}
+
+tasks.register("ktlintFormat", JavaExec) {
+  group = "formatting"
+  description = "Fix Kotlin code style deviations."
+  classpath = configurations.ktlint
+  mainClass = "com.pinterest.ktlint.Main"
+  jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
+  args "-F", "src/**/*.kt", "**.kts", "!**/build/**"
+}
+
+task installGitHooks(type: Copy) {
+  from new File(rootProject.rootDir, 'hooks/pre-commit')
+  into { new File(rootProject.rootDir, '.git/hooks') }
+}
+
+build.dependsOn installGitHooks
+
+jacocoTestReport {
+  dependsOn test
+
+  reports {
+    xml.required = false
+    csv.required = false
+    html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+  }
 }
 
 test {
   useJUnitPlatform()
+  finalizedBy jacocoTestReport
 }
 
 kotlin {
